--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,7 +29,7 @@ android {
 }
 
 dependencies {
-
+    implementation 'com.google.mlkit:face-detection:16.1.7'
     implementation libs.appcompat
     implementation libs.material
     implementation libs.activity
